<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_title">The Queen\'s Gamit</string>
    <string name="movie_genre">Drama, Sport</string>
    <string name="movie_creators">Creators:</string>
    <string name="movie_creator_name">Scott Frank, Alan Scott</string>
    <string name="image_description">Picture of the Movie</string>
    <string name="movie_actors">Actors:</string>
    <string name="movie_creators_name">Anya Taylor-Joy, Chloe Pirrie</string>
    <string name="story_header">Story</string>
    <string name="story_text">The Queens Gambit follows the life of an orphan chess prodigy, Elizabeth Harmon, during her quest to become the worlds greatest chess player while struggling with emotional problems and drug and alcohol dependency. The title of the series refers to a chess opening of the same name. The story begins in the mid-1950s and proceeds into the 1960s.[4]
        The story begins in Lexington, Kentucky, where a nine-year-old Beth, having lost her mother in a car crash, is taken to an orphanage where she is taught chess by the buildings custodian, Mr. Shaibel. As was common during the 1950s, the orphanage dispenses daily tranquilizer pills to the girls,[5][6] which turns into an addiction for Beth. She quickly becomes a strong chess player due to her visualization skills, which are enhanced by the tranquilizers. A few years later, Beth is adopted by Alma Wheatley and her husband from Lexington. As she adjusts to her new home, Beth enters a chess tournament and wins despite having no prior experience in competitive chess. She develops friendships with several people, including former Kentucky State Champion Harry Beltik, United States National Champion Benny Watts, and journalist and fellow player D.L. Townes. As Beth rises to the top of the chess world and reaps the financial benefits of her success, her drug and alcohol dependency becomes worse.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_detail">To Detail</string>
    <string name="movie_name">Movie Name</string>
    <string name="actor">Actor</string>
    <string name="creator">Creator</string>
    <string name="see_detail">See Detail</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="welcome_to_movieapp">Welcome to MovieApp!</string>
    <string name="next">Next</string>
    <string name="your_score">Your Score</string>
    <string name="menu_quiz">Quiz</string>

    <string name="default_score">%d/%d</string>
    <string name="question_progress">Question %d/%d</string>
    <string name="my_notes">Your notes: %s</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="remove_favourite">Remove</string>
    <string name="edit_favourite">Edit</string>
    <string name="clear_favourite">Clear</string>
    <string name="my_watchlist">My Watchlist</string>
</resources>
